[package]
name = "yew-example"
version = "0.1.0"
edition = "2021"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-hooks = "0.1.56"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
web-sys = {version = "0.3.57", features = ["Window", "Performance", "PerformanceEntry"]}

